--- a/README
+++ b/README
@@ -580,10 +580,12 @@ because we can only help you install the site, but never modify the code that th
 #1. Prepare the system by installing the necessary components.
 
 	root@ircd:~# apt install apache2 apache2-bin apache2-data apache2-dev apache2-doc apache2-ssl-dev apache2-utils libapache2-mod-php 
-        php7.4 php7.4-cgi php7.4-cli php7.4-common php7.4-curl php7.4-dev php7.4-gd php7.4-json php7.4-mysql php7.4-pgsql php7.4-readline
-	php7.4-sqlite3 php7.4-xml php7.4-xmlrpc libreadline-dev libssl-dev openssl zlib1g zlib1g-dev
+        php php-cgi php-cli php-common php-curl php-dev php-gd php-json php-mysql php-pgsql php-readline
+	php-sqlite3 php-xml php-xmlrpc libreadline-dev libssl-dev openssl zlib1g zlib1g-dev
 	root@ircd:~# updatedb	
-	root@ircd:~#  nano /etc/php/7.4/apache2/php.ini 
+	root@ircd:~#  nano /etc/php/*/apache2/php.ini 
+	Note: * mean the version of your php $(php -v) Output: PHP 8.2.20 (cli) (built: Jun 17 2024 13:33:14) (NTS)
+	root@ircd:~# nano /et/php/8.2/apache2/php.ini
 	NOW: Go to the line 187 and change short_open_tag (from Off to On)
 	Save the file CTRL+O
 
@@ -601,6 +603,8 @@ because we can only help you install the site, but never modify the code that th
 	 gnuworld@ircd:~/gnuworld/cservice-web$ composer install
 	 gnuworld@ircd:~/gnuworld/cservice-web$ cd php_includes
 	 gnuworld@ircd:~/gnuworld/cservice-web/php_includes$ cp config.inc.dist config.inc
+	 gnuworld@ircd:~/gnuworld/cservice-web/php_includes$ cp cmaster.inc.dist cmaster.inc
+	 gnuworld@ircd:~/gnuworld/cservice-web/php_includes$ cp blackhole.inc.dist blackhole.inc
 	 EDIT: cp config.inc.dist config.inc (With your own values)
 	 
 	 gnuworld@ircd:~/gnuworld/cservice-web/php_includes$ cd ..
